--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8">
-    <title>KidKinder - Kindergarten Website Template</title>
+    <title>Seekhle</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport">
     <meta content="Free HTML Templates" name="keywords">
     <meta content="Free HTML Templates" name="description">
@@ -34,8 +34,8 @@
     <div class="container-fluid bg-light position-relative shadow">
         <nav class="navbar navbar-expand-lg bg-light navbar-light py-3 py-lg-0 px-0 px-lg-5">
             <a href="" class="navbar-brand font-weight-bold text-secondary" style="font-size: 50px;">
-                <i class="flaticon-043-teddy-bear"></i>
-                <span class="text-primary">KidKinder</span>
+                <i class="flaticon-043-teddy-bear" ></i>
+                <span class="text-primary">Seekhle</span>
             </a>
             <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navbarCollapse">
                 <span class="navbar-toggler-icon"></span>
@@ -44,8 +44,8 @@
                 <div class="navbar-nav font-weight-bold mx-auto py-0">
                     <a href="index.html" class="nav-item nav-link active">Home</a>
                     <a href="about.html" class="nav-item nav-link">About</a>
-                    <a href="class.html" class="nav-item nav-link">Classes</a>
-                    <a href="team.html" class="nav-item nav-link">Teachers</a>
+                    <a href="class.html" class="nav-item nav-link">Admissions</a>
+                    <a href="team.html" class="nav-item nav-link">Learning</a>
                     <a href="gallery.html" class="nav-item nav-link">Gallery</a>
                     <div class="nav-item dropdown">
                         <a href="#" class="nav-link dropdown-toggle" data-toggle="dropdown">Pages</a>
@@ -67,11 +67,9 @@
     <div class="container-fluid bg-primary px-0 px-md-5 mb-5">
         <div class="row align-items-center px-3">
             <div class="col-lg-6 text-center text-lg-left">
-                <h4 class="text-white mb-4 mt-5 mt-lg-0">Kids Learning Center</h4>
-                <h1 class="display-3 font-weight-bold text-white">New Approach to Kids Education</h1>
-                <p class="text-white mb-4">Sea ipsum kasd eirmod kasd magna, est sea et diam ipsum est amet sed sit.
-                    Ipsum dolor no justo dolor et, lorem ut dolor erat dolore sed ipsum at ipsum nonumy amet. Clita
-                    lorem dolore sed stet et est justo dolore.</p>
+                <h4 class="text-white mb-4 mt-5 mt-lg-0">Guiding you to your Dream University</h4>
+                <h1 class="display-3 font-weight-bold text-white">Seekhle: Your Premier Education Platform</h1>
+                <p class="text-white mb-4">Seekhle is one of the most experienced and reliable student consultancy firms to guide you for your higher education.</p>
                 <a href="" class="btn btn-secondary mt-1 py-3 px-5">Learn More</a>
             </div>
             <div class="col-lg-6 text-center text-lg-right">
@@ -155,10 +153,11 @@
                 </div>
                 <div class="col-lg-7">
                     <p class="section-title pr-5"><span class="pr-2">Learn About Us</span></p>
-                    <h1 class="mb-4">Best School For Your Kids</h1>
-                    <p>Invidunt lorem justo sanctus clita. Erat lorem labore ea, justo dolor lorem ipsum ut sed eos,
-                        ipsum et dolor kasd sit ea justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum est
-                        dolor</p>
+                    <h1 class="mb-4">Guiding You to Your Dream University</h1>
+                    <p>At Seekhle, we are committed to helping students achieve their academic goals by providing them with the 
+                        best possible guidance and support. Our team of experienced counselors and experts work closely with 
+                        students to help them navigate the complex world of higher education. We offer a range of services, 
+                        including college counseling and admission assistance, to help students secure a place at their dream university.</p>
                     <div class="row pt-2 pb-4">
                         <div class="col-6 col-md-4">
                             <img class="img-fluid rounded" src="img/about-2.jpg" alt="">
@@ -184,15 +183,17 @@
         <div class="container">
             <div class="text-center pb-2">
                 <p class="section-title px-5"><span class="px-2">Popular Classes</span></p>
-                <h1 class="mb-4">Classes for Your Kids</h1>
+                <h1 class="mb-4">Why you will choose us</h1>
             </div>
             <div class="row">
                 <div class="col-lg-4 mb-5">
                     <div class="card border-0 bg-light shadow-sm pb-2">
                         <img class="card-img-top mb-2" src="img/class-1.jpg" alt="">
                         <div class="card-body text-center">
-                            <h4 class="card-title">Drawing Class</h4>
-                            <p class="card-text">Justo ea diam stet diam ipsum no sit, ipsum vero et et diam ipsum duo et no et, ipsum ipsum erat duo amet clita duo</p>
+                            <h4 class="card-title">Our Approach</h4>
+                            <p class="card-text">
+                                Our Approach
+                                At Seekhle, we believe that every student has the potential to succeed. That's why we provide personalized guidance and support to help students achieve their academic goals. We work with students to identify their strengths and weaknesses, and help them develop a plan to maximize their potential. Our approach is tailored to each student's needs, ensuring that they receive the support and guidance they need to succeed.</p>
                         </div>
                         <div class="card-footer bg-transparent py-4 px-5">
                             <div class="row border-bottom">
@@ -219,8 +220,8 @@
                     <div class="card border-0 bg-light shadow-sm pb-2">
                         <img class="card-img-top mb-2" src="img/class-2.jpg" alt="">
                         <div class="card-body text-center">
-                            <h4 class="card-title">Language Learning</h4>
-                            <p class="card-text">Justo ea diam stet diam ipsum no sit, ipsum vero et et diam ipsum duo et no et, ipsum ipsum erat duo amet clita duo</p>
+                            <h4 class="card-title">Our Services</h4>
+                            <p class="card-text">We offer a range of services to help students achieve their academic goals. Our college counseling services provide students with personalized guidance and support throughout the admissions process. We also offer admission assistance to help students secure a place at their dream university. In addition, we provide test preparation services to help students excel on standardized tests like the SAT and ACT</p>
                         </div>
                         <div class="card-footer bg-transparent py-4 px-5">
                             <div class="row border-bottom">
@@ -247,8 +248,8 @@
                     <div class="card border-0 bg-light shadow-sm pb-2">
                         <img class="card-img-top mb-2" src="img/class-3.jpg" alt="">
                         <div class="card-body text-center">
-                            <h4 class="card-title">Basic Science</h4>
-                            <p class="card-text">Justo ea diam stet diam ipsum no sit, ipsum vero et et diam ipsum duo et no et, ipsum ipsum erat duo amet clita duo</p>
+                            <h4 class="card-title">Programs</h4>
+                            <p class="card-text">At Seekhle, we offer a range of programs to enhance students' learning and help them achieve their academic goals. Our programs include personalized tutoring, test preparation, and academic enrichment programs. We also offer summer programs to help students make the most of their summer break.</p>
                         </div>
                         <div class="card-footer bg-transparent py-4 px-5">
                             <div class="row border-bottom">
@@ -282,22 +283,20 @@
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-lg-7 mb-5 mb-lg-0">
-                    <p class="section-title pr-5"><span class="pr-2">Book A Seat</span></p>
-                    <h1 class="mb-4">Book A Seat For Your Kid</h1>
-                    <p>Invidunt lorem justo sanctus clita. Erat lorem labore ea, justo dolor lorem ipsum ut sed eos,
-                        ipsum et dolor kasd sit ea justo. Erat justo sed sed diam. Ea et erat ut sed diam sea ipsum est
-                        dolor</p>
+                    <p class="section-title pr-5"><span class="pr-2">Consult Us Now</span></p>
+                    <h1 class="mb-4">For Parents</h1>
+                    <p>At Seekhle, we understand that parents play a crucial role in their children's academic success. That's why we provide parents with the support and resources they need to help their children succeed. From college planning to test preparation, we offer a range of services to help parents support their children's academic goals.</p>
                     <ul class="list-inline m-0">
-                        <li class="py-2"><i class="fa fa-check text-success mr-3"></i>Labore eos amet dolor amet diam</li>
-                        <li class="py-2"><i class="fa fa-check text-success mr-3"></i>Etsea et sit dolor amet ipsum</li>
-                        <li class="py-2"><i class="fa fa-check text-success mr-3"></i>Diam dolor diam elitripsum vero.</li>
+                        <li><i class="fa fa-check text-success mr-3"></i></li>
+                        <li><i class="fa fa-check text-success mr-3"></i></li>
+                        <li><i class="fa fa-check text-success mr-3"></i></li>
                     </ul>
                     <a href="" class="btn btn-primary mt-4 py-2 px-4">Book Now</a>
                 </div>
                 <div class="col-lg-5">
                     <div class="card border-0">
                         <div class="card-header bg-secondary text-center p-4">
-                            <h1 class="text-white m-0">Book A Seat</h1>
+                            <h1 class="text-white m-0">Book A Free Consultation</h1>
                         </div>
                         <div class="card-body rounded-bottom bg-primary p-5">
                             <form>
@@ -411,58 +410,53 @@
         <div class="container p-0">
             <div class="text-center pb-2">
                 <p class="section-title px-5"><span class="px-2">Testimonial</span></p>
-                <h1 class="mb-4">What Parents Say!</h1>
+                <h1 class="mb-4">What Students Say!</h1>
             </div>
             <div class="owl-carousel testimonial-carousel">
                 <div class="testimonial-item px-3">
                     <div class="bg-light shadow-sm rounded mb-4 p-4">
                         <h3 class="fas fa-quote-left text-primary mr-3"></h3>
-                        Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elitr eirmod clita lorem. Dolor tempor ipsum clita
+                        I have got study opportunity in nursing to establish my career in nursing and health care and it was possible for the friendly counselors at Seekhle
                     </div>
                     <div class="d-flex align-items-center">
-                        <img class="rounded-circle" src="img/testimonial-1.jpg" style="width: 70px; height: 70px;" alt="Image">
                         <div class="pl-3">
-                            <h5>Parent Name</h5>
-                            <i>Profession</i>
+                            <h5>Radhika Singh</h5>
+                            <i>BA Hons Buisness Studies</i>
                         </div>
                     </div>
                 </div>
                 <div class="testimonial-item px-3">
                     <div class="bg-light shadow-sm rounded mb-4 p-4">
                         <h3 class="fas fa-quote-left text-primary mr-3"></h3>
-                        Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elitr eirmod clita lorem. Dolor tempor ipsum clita
+                        Highly recommended. Seekhle is really helpful, offering a high quality service towards the students helping those to complete all the necessary documents to obtain the finance, to start an educational journey easily. I am really pleased that I chose this company to help me with all the documentation and also giving me advice to chose a proper University that would be suitable.
                     </div>
                     <div class="d-flex align-items-center">
-                        <img class="rounded-circle" src="img/testimonial-2.jpg" style="width: 70px; height: 70px;" alt="Image">
                         <div class="pl-3">
-                            <h5>Parent Name</h5>
-                            <i>Profession</i>
+                            <h5>Gaurav Basu</h5>
+                            <i>Applied Computing</i>
                         </div>
                     </div>
                 </div>
                 <div class="testimonial-item px-3">
                     <div class="bg-light shadow-sm rounded mb-4 p-4">
                         <h3 class="fas fa-quote-left text-primary mr-3"></h3>
-                        Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elitr eirmod clita lorem. Dolor tempor ipsum clita
-                    </div>
+                        Highly recommend .The girls that I was in contact with was very nice, helpful and very polite. They have been answering my texts promptly all the time
+                     </div>
                     <div class="d-flex align-items-center">
-                        <img class="rounded-circle" src="img/testimonial-3.jpg" style="width: 70px; height: 70px;" alt="Image">
                         <div class="pl-3">
-                            <h5>Parent Name</h5>
-                            <i>Profession</i>
+                            <h5>Radhika Verma</h5>
+                            <i>Business Management</i>
                         </div>
                     </div>
                 </div>
                 <div class="testimonial-item px-3">
                     <div class="bg-light shadow-sm rounded mb-4 p-4">
                         <h3 class="fas fa-quote-left text-primary mr-3"></h3>
-                        Sed ea amet kasd elitr stet, stet rebum et ipsum est duo elitr eirmod clita lorem. Dolor tempor ipsum clita
-                    </div>
+                        I recommend with confidence. Good service and professional. Great communication with high quality service. Thank you</div>
                     <div class="d-flex align-items-center">
-                        <img class="rounded-circle" src="img/testimonial-4.jpg" style="width: 70px; height: 70px;" alt="Image">
                         <div class="pl-3">
-                            <h5>Parent Name</h5>
-                            <i>Profession</i>
+                            <h5>Anuj Kumar</h5>
+                            <i>BTech Computer Science</i>
                         </div>
                     </div>
                 </div>
@@ -537,9 +531,9 @@
             <div class="col-lg-3 col-md-6 mb-5">
                 <a href="" class="navbar-brand font-weight-bold text-primary m-0 mb-4 p-0" style="font-size: 40px; line-height: 40px;">
                     <i class="flaticon-043-teddy-bear"></i>
-                    <span class="text-white">KidKinder</span>
+                    <span class="text-white">Seekhle</span>
                 </a>
-                <p>Labore dolor amet ipsum ea, erat sit ipsum duo eos. Volup amet ea dolor et magna dolor, elitr rebum duo est sed diam elitr. Stet elitr stet diam duo eos rebum ipsum diam ipsum elitr.</p>
+                <p>Empowering the Next Generation - We provide innovative educational services to transform learning experiences.</p>
                 <div class="d-flex justify-content-start mt-4">
                     <a class="btn btn-outline-primary rounded-circle text-center mr-2 px-0"
                         style="width: 38px; height: 38px;" href="#"><i class="fab fa-twitter"></i></a>
@@ -557,21 +551,21 @@
                     <h4 class="fa fa-map-marker-alt text-primary"></h4>
                     <div class="pl-3">
                         <h5 class="text-white">Address</h5>
-                        <p>123 Street, New York, USA</p>
+                        <p>Kolkata Railway Station (Chitpur Station), Kolkata Station Road, Belgachia, Calcutta, West Bengal, India</p>
                     </div>
                 </div>
                 <div class="d-flex">
                     <h4 class="fa fa-envelope text-primary"></h4>
                     <div class="pl-3">
                         <h5 class="text-white">Email</h5>
-                        <p>info@example.com</p>
+                        <p>info@seekhle.org</p>
                     </div>
                 </div>
                 <div class="d-flex">
                     <h4 class="fa fa-phone-alt text-primary"></h4>
                     <div class="pl-3">
                         <h5 class="text-white">Phone</h5>
-                        <p>+012 345 67890</p>
+                        <p>91 869 890 8652</p>
                     </div>
                 </div>
             </div>
@@ -580,8 +574,8 @@
                 <div class="d-flex flex-column justify-content-start">
                     <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Home</a>
                     <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>About Us</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Classes</a>
-                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Teachers</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Admissions</a>
+                    <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Learning</a>
                     <a class="text-white mb-2" href="#"><i class="fa fa-angle-right mr-2"></i>Our Blog</a>
                     <a class="text-white" href="#"><i class="fa fa-angle-right mr-2"></i>Contact Us</a>
                 </div>
@@ -604,9 +598,8 @@
         </div>
         <div class="container-fluid pt-5" style="border-top: 1px solid rgba(23, 162, 184, .2);;">
             <p class="m-0 text-center text-white">
-                &copy; <a class="text-primary font-weight-bold" href="#">Your Site Name</a>. All Rights Reserved. Designed
-                by
-                <a class="text-primary font-weight-bold" href="https://htmlcodex.com">HTML Codex</a>
+                &copy; <a class="text-primary font-weight-bold" href="#">Seekhle</a>. All Rights Reserved.
+                <a class="text-primary font-weight-bold" href="https://htmlcodex.com"></a>
             </p>
         </div>
     </div>
